# python-pidgin

./: .gitignore  README.md  my_script.pg  prd.md  pyproject.toml  test_pidgin.pg  walkthrough.md
.agents/skills/release-python-package/: SKILL.md
.github/workflows/: publish.yml
examples/: balablu.pg  emi_lokan.pg  let_the_poor_breathe.pg
src/python_pidgin/: __init__.py
vscode-extension/: language-configuration.json  package.json
vscode-extension/syntaxes/: python-pidgin.tmLanguage.json
