[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pidgin"
version = "1.1.1"
authors = [
  { name="Python Pidgin Creator", email="author@example.com" },
]
description = "The Pidgin Programming Language: A culturally expressive, strict superset of Python that lets you code the way you speak."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
python-pidgin = "python_pidgin:main"
